<resources>
    <string name="app_name">Curriculum</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SelectOne">Select...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nothing" />

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="menu">menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navdrawer_item_create_cv">Create CV</string>
    <string name="navdrawer_item_export">Export</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="personal_records">Personal records</string>
    <string name="work_experience">Work experience</string>
    <string name="education">Education</string>
    <string name="personal_skills">Skills</string>
    <string name="other_personal_skills">Other skills</string>

    <!-- GOOGLE LOGIN -->
    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- GLOBAL STRINGS -->
    <string name="empty_content">empty</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="select_date">Select date</string>
    <string name="city">City</string>
    <string name="country">Country</string>

    <!-- BUTTON CONTENT  -->
    <string name="button_save">SAVE</string>
    <string name="button_next">NEXT</string>
    <string name="button_back">BACK</string>
    <string name="button_ok">OK</string>
    <string name="button_agree">AGREE</string>
    <string name="button_disagree">DISAGREE</string>
    <string name="button_finish">FINISH</string>
    <string name="button_export">EXPORT</string>

    <!-- PROFILE CONTENT  -->
    <string name="title_profile">Profile</string>
    <string name="title_profile_edit">Edit profile</string>
    <string name="pro_about_user">About you</string>
    <string name="pro_name">Name</string>
    <string name="pro_surname">Surname</string>
    <string name="pro_email">E-mail</string>
    <string name="pro_street_adress">Street adress</string>
    <string name="pro_postal_code">Postal code</string>
    <string name="pro_tel_number">Telephone number</string>
    <string name="pro_web_blog">Web blog</string>
    <string name="pro_location">Location</string>
    <string name="pro_web_profiles">Web profiles</string>

    <!-- APPLICATION CONTENT  -->
    <string name="title_application">Application</string>
    <string name="title_application_edit">Edit application</string>
    <string name="application_yours">Your application</string>
    <string name="application_type">Type of application</string>
    <string name="application_description">Application description</string>

    <!-- EXPERIENCE CONTENT  -->
    <string name="title_experience">Work Experience</string>
    <string name="title_experience_edit">Edit experience</string>
    <string name="exp_position">Position</string>
    <string name="exp_employer">Employer</string>
    <string name="exp_main_activities">Main activities</string>

    <!-- EDUCATION CONTENT  -->
    <string name="title_education">Education</string>
    <string name="title_education_edit">Edit education</string>
    <string name="edu_qualification">Qualification title</string>
    <string name="edu_provider">Provider of education</string>
    <string name="edu_main_subjects">Main Subjects</string>

    <!-- SKILLS CONTENT  -->
    <string name="title_skills">Skills</string>

    <string name="title_languages">Languages</string>
    <string name="title_skills_mother_tongues">Mother tongue(s)</string>
    <string name="title_skills_other_languages">Other language(s)</string>

    <string name="title_skills_evaluation">Evaluation</string>

    <string name="title_skills_communication">Communication</string>
    <string name="title_skills_managament">Organisational / managerial skills</string>
    <string name="title_skills_dig_competence">Digital competence</string>
    <string name="title_skills_job_related">Job related skills</string>

    <!-- LANGUAGE CONTENT  -->
    <string name="language">Language</string>

    <string name="evaluation_understanding">Understanding</string>
    <string name="evaluation_speaking">Speaking</string>
    <string name="evaluation_writing">Writing</string>

    <string name="title_activity_wizard">WizardActivity</string>

    <string name="Description">Description</string>

    <!-- EXPORT CONTENT  -->
    <string name="title_export">Export</string>
    <string name="dialog_message_successfully_export">Your cv has successfully been sended to yur email ((:</string>
    <string name="dialog_message_mail_to">Your cv will be sent to </string>

    <string name="dialogTitleConfirmationDelete">Delete confirmation</string>
    <string name="dialogContentConfirmationDelete">Are you sure you want to DELETE selected item ?</string>

    <string name="educ_add_experience_title">Add education</string>


    <string name="toast_on_delete">You have succesfully deleted selected item</string>


    <!--EVALUATION SUB TYPES -->
    <string name="listening">1</string>
    <string name="reading">2</string>
    <string name="spoken_interaction">3</string>
    <string name="spoken_production">4</string>
    <string name="writing">5</string>


    <string name="parallax_image">Parallax image transform</string>
    <string name="text_welcome_first">Create your CV no matter where you are…</string>
    <string name="text_welcome_second">Now you can do it with your best baddy ((:</string>
    <string name="text_welcome_third">While drinking your favourite coffe</string>
    <string name="text_welcome_fourth">Lets get started</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">CREATE ACCOUNT</string>
    <string name="message_empty_password">Password field empty</string>
    <string name="message_empty_email">E-mail field empty</string>
    <string name="message_empty_email_and_password">E-mail and password field are empty</string>
    <string name="username">User name</string>
    <string name="register_button">REGISTER</string>
    <string name="go_to_login">GO TO LOGIN</string>
    <string name="message_short_uname">Username should be at least 4 charachters</string>
    <string name="message_empty_fields">One or more fields are empty !</string>
    <string name="message_user_already_exists">User already exists</string>
    <string name="message_invalid_email">Invalid email</string>
    <string name="message_incorrect_email_or_password">Incorrect email or password</string>
    <string name="type_native_lang">1</string>
    <string name="type_other_lang">2</string>
    <string name="button_edit">EDIT</string>

    <string name="empty_desription">Description empty...</string>
    <string name="message_unexpected_message">Unexpected error occured :( please try again ...</string>
    <string name="button_delete">DELETE</string>
    <string name="dialog_delete_title">Deleting...</string>
    <string name="dialog_delete_message">Please wait...</string>

    <string name="title_progress_dialog_call_to_server">Contacting server</string>
    <string name="message_sending_data">Sending data...</string>


    <string name="write_here">Write here...</string>
    <string name="button_cancel">CANCEL</string>


    <string name="parallax_image_logo">parralax_image_logo</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="bground_login_descr">Backgground login</string>
    <string name="contentDialogFirstTime">Since you are first time here, it\'s reccomended to proceed with wizard</string>
    <string name="dialog_welcome_title">Welcome</string>
    <string name="skip">skip</string>
    <string name="p_dialog_login_title">Logging in</string>
    <string name="p_dialog_content_wait">Please wait...</string>
    <string name="p_dialog_wiz_title">Wizard</string>
    <string name="title_activity_test">TestActivity</string>



</resources>
