<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layRegisterEditText">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo_with_black_shadow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layRegisterEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:divider="@drawable/dividier_empty"
        android:orientation="vertical"
        android:padding="@dimen/body_padding"
        android:showDividers="middle">

        <EditText
            android:id="@+id/etLogEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_login"
            android:gravity="center_horizontal"
            android:hint="@string/pro_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_et_wizard_login"
            android:textColor="@color/wizard_body_text_color"
            android:textColorHint="@color/colorHighlight"
            android:textSize="@dimen/body_text_size" />

        <EditText
            android:id="@+id/etLogPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_login"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_et_wizard_login"
            android:textColor="@color/wizard_body_text_color"
            android:textColorHint="@color/colorHighlight"
            android:textSize="@dimen/body_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layRegisterEditText"
        android:orientation="vertical"
        android:padding="@dimen/body_padding">

        <Button
            android:id="@+id/btLoginLogin"
            style="@style/ButtonRaised"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/login_buttons" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent">

        <Button
            android:id="@+id/btLoginGoToRegister"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:textColor="@color/login_buttons_down" />
    </RelativeLayout>
</RelativeLayout>


